# halotoy

./: CMakeLists.txt  helper.h  photon.h  plot-data.py  plot-halo.py  plot-hist.py  run_simhalo.sh  simhalo.cpp  solve_z.h
catalogs/: test_catalog.json
configs/: config.json
include/: PairHaloSimulator.h  helper.h
scripts/: plot-data.py
src/: PairHaloSimulator.cpp  helper.cpp  main_population.cpp
